llama-3.1-8b/3_tier/igw.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "3-tier-igw"
  }
}
