llama-3.1-8b/3_tier/nat.tf
resource "aws_eip" "nat_eip" {
  vpc = true
  tags = {
    Name = "nat-eip"
  }
}

resource "aws_nat_gateway" "nat_gw" {
  allocation_id = aws_eip.nat_eip.id
  subnet_id     = aws_subnet.public_subnets_us_east_1b[0].id
  tags = {
    Name = "nat-gw"
  }
}
