llama-3.1-8b/3_tier/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.cidr_block
  enable_dns_hostnames = true
  tags = {
    Name = "3-tier-vpc"
  }
}
